--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
+                <img src="logo.png" alt="NETBFRS Logo" class="brand-logo">
                 <h1>NETBFRS</h1>
             </div>
             <ul class="nav-menu">
