Refonte page hero : grand logo centré + nouveaux boutons AI Formation et AI2Learn

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
                 <li><a href="#formations" class="nav-link">Formations</a></li>
                 <li><a href="#avantages" class="nav-link">Avantages</a></li>
                 <li><a href="#quiz" class="nav-link">Quiz</a></li>
-                <li><a href="https://cyberpath.dev/" class="nav-link" target="_blank" rel="noopener">Ai2Learn <i class="fas fa-external-link-alt" style="font-size: 0.7em;"></i></a></li>
-                <li><a href="https://skzfr.github.io/iic-hub/" class="nav-link" target="_blank" rel="noopener">AiFormation <i class="fas fa-external-link-alt" style="font-size: 0.7em;"></i></a></li>
+                <li><a href="https://cyberpath.dev/" class="nav-link" target="_blank" rel="noopener">Ai2Learn.cz <i class="fas fa-external-link-alt" style="font-size: 0.7em;"></i></a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <div class="hamburger" role="button" aria-label="Menu de navigation" aria-expanded="false" tabindex="0">
@@ -60,17 +59,20 @@
     <section id="accueil" class="hero">
         <div class="hero-overlay"></div>
         <div class="hero-content">
+            <div class="hero-logo-large">
+                <img src="logo.png" alt="NETBFRS Logo" class="hero-main-logo">
+            </div>
             <h1 class="hero-title">NETBFRS Académie</h1>
             <p class="hero-subtitle">Excellence en Formation Réseaux & Cybersécurité</p>
             <p class="hero-description">Du BTS SIO SISR au Master Cybersécurité</p>
             <div class="hero-buttons">
-                <a href="https://cyberpath.dev/" class="btn btn-hero" target="_blank" rel="noopener">
-                    <span class="btn-logo">&gt;_</span>
-                    <span>CyberPath</span>
+                <a href="https://skzfr.github.io/iic-hub/" class="btn btn-hero-new" target="_blank" rel="noopener">
+                    <i class="fas fa-brain"></i>
+                    <span>AI Formation</span>
                 </a>
-                <a href="https://skzfr.github.io/iic-hub/" class="btn btn-hero" target="_blank" rel="noopener">
-                    <span class="btn-logo">IIC</span>
-                    <span>HUB</span>
+                <a href="https://cyberpath.dev/" class="btn btn-hero-new" target="_blank" rel="noopener">
+                    <i class="fas fa-graduation-cap"></i>
+                    <span>AI2Learn</span>
                 </a>
             </div>
         </div>
@@ -445,7 +447,7 @@
                         <li><a href="#avantages">Avantages</a></li>
                         <li><a href="#contact">Contact</a></li>
                         <li><a href="https://cyberpath.dev/" target="_blank" rel="noopener">Ai2Learn</a></li>
-                        <li><a href="https://skzfr.github.io/iic-hub/" target="_blank" rel="noopener">AiFormation</a></li>
+                        <li><a href="https://skzfr.github.io/iic-hub/" target="_blank" rel="noopener">AI Formation</a></li>
                         <li><a href="#">Admissions</a></li>
                     </ul>
                 </div>
