--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
             <p class="hero-description">Du BTS SIO SISR au Master Cybersécurité</p>
             <div class="hero-buttons">
                 <a href="https://skzfr.github.io/iic-hub/" class="btn btn-hero-new" target="_blank" rel="noopener">
-                    <i class="fas fa-brain"></i>
+                    <img src="image/ai_formation.jpg" alt="AI Formation" class="btn-logo-img">
                     <span>AI Formation</span>
                 </a>
                 <a href="https://cyberpath.dev/" class="btn btn-hero-new" target="_blank" rel="noopener">
-                    <i class="fas fa-graduation-cap"></i>
+                    <img src="image/ai2_learn.jpg" alt="AI2Learn" class="btn-logo-img">
                     <span>AI2Learn</span>
                 </a>
             </div>
