Utilisation logo transparent sans background + boutons images rectangulaires

--- a/index.html
+++ b/index.html
@@ -60,19 +60,17 @@
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <div class="hero-logo-large">
-                <img src="logo.png" alt="NETBFRS Logo" class="hero-main-logo">
+                <img src="image/logo_sans_background.png" alt="NETBFRS Logo" class="hero-main-logo">
             </div>
             <h1 class="hero-title">NETBFRS Académie</h1>
             <p class="hero-subtitle">Excellence en Formation Réseaux & Cybersécurité</p>
             <p class="hero-description">Du BTS SIO SISR au Master Cybersécurité</p>
             <div class="hero-buttons">
-                <a href="https://skzfr.github.io/iic-hub/" class="btn btn-hero-new" target="_blank" rel="noopener">
-                    <img src="image/logo_sans_background.png" alt="AI Formation" class="btn-logo-img">
-                    <span>AI Formation</span>
+                <a href="https://skzfr.github.io/iic-hub/" class="btn-image-link" target="_blank" rel="noopener">
+                    <img src="image/ai_formation.jpg" alt="AI Formation" class="btn-image">
                 </a>
-                <a href="https://cyberpath.dev/" class="btn btn-hero-new" target="_blank" rel="noopener">
-                    <img src="image/logo_sans_background.png" alt="AI2Learn" class="btn-logo-img">
-                    <span>AI2Learn</span>
+                <a href="https://cyberpath.dev/" class="btn-image-link" target="_blank" rel="noopener">
+                    <img src="image/AI2_learn.jpg" alt="AI2Learn" class="btn-image">
                 </a>
             </div>
         </div>
