--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h4>Adresse</h4>
-                            <p>123 Avenue de la République<br>75000 Paris, France</p>
+                            <p>115 rue Claude Nicolas Ledoux<br>13290 Aix en Provence, France</p>
                         </div>
                     </div>
                     <div class="info-item">
