Fix cache CSS avec versioning

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="twitter:title" content="NETBFRS - Académie de Formation en Réseaux et Cybersécurité">
     <meta property="twitter:description" content="Formation professionnelle du BTS SIO SISR au Master Cybersécurité. Devenez expert en réseaux et sécurité informatique.">
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=2">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
