--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email</h4>
-                            <p>contact@netbfrs.fr</p>
+                            <p>contact@netbfrs.com</p>
                         </div>
                     </div>
                     <div class="info-item">
