Correction endpoint Formspree (mreazgak)

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                         </div>
                     </div>
                 </div>
-                <form class="contact-form" id="contactForm" action="https://formspree.io/f/mwzazgak" method="POST">
+                <form class="contact-form" id="contactForm" action="https://formspree.io/f/mreazgak" method="POST">
                     <div class="form-group">
                         <input type="text" id="name" name="name" required>
                         <label for="name">Nom Complet</label>
@@ -452,7 +452,7 @@
                 <div class="footer-section">
                     <h4>Newsletter</h4>
                     <p>Restez informé de nos actualités</p>
-                    <form class="newsletter-form" action="https://formspree.io/f/mwzazgak" method="POST">
+                    <form class="newsletter-form" action="https://formspree.io/f/mreazgak" method="POST">
                         <input type="email" name="email" placeholder="Votre email" required aria-label="Adresse email pour la newsletter">
                         <button type="submit" aria-label="S'inscrire à la newsletter"><i class="fas fa-paper-plane"></i></button>
                     </form>
