Remplacer Quiz par Ai Formation dans la navigation

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li><a href="#apropos" class="nav-link">À Propos</a></li>
                 <li><a href="#formations" class="nav-link">Formations</a></li>
                 <li><a href="#avantages" class="nav-link">Avantages</a></li>
-                <li><a href="#quiz" class="nav-link">Quiz</a></li>
+                <li><a href="https://skzfr.github.io/iic-hub/" class="nav-link" target="_blank" rel="noopener">Ai Formation <i class="fas fa-external-link-alt" style="font-size: 0.7em;"></i></a></li>
                 <li><a href="https://cyberpath.dev/" class="nav-link" target="_blank" rel="noopener">Ai2Learn.cz <i class="fas fa-external-link-alt" style="font-size: 0.7em;"></i></a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
