Retrait boutons AI2Learn avec flag 'Bientôt' dans footer

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                 <li><a href="#formations" class="nav-link">Formations</a></li>
                 <li><a href="#avantages" class="nav-link">Avantages</a></li>
                 <li><a href="https://skzfr.github.io/iic-hub/" class="nav-link" target="_blank" rel="noopener">Ai Formation <i class="fas fa-external-link-alt" style="font-size: 0.7em;"></i></a></li>
-                <li><a href="https://cyberpath.dev/" class="nav-link" target="_blank" rel="noopener">Ai2Learn.cz <i class="fas fa-external-link-alt" style="font-size: 0.7em;"></i></a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <div class="hamburger" role="button" aria-label="Menu de navigation" aria-expanded="false" tabindex="0">
@@ -68,9 +67,6 @@
             <div class="hero-buttons">
                 <a href="https://skzfr.github.io/iic-hub/" class="btn-image-link" target="_blank" rel="noopener">
                     <img src="image/ai_formation.jpg" alt="AI Formation" class="btn-image">
-                </a>
-                <a href="https://cyberpath.dev/" class="btn-image-link" target="_blank" rel="noopener">
-                    <img src="image/AI2_learn.jpg" alt="AI2Learn" class="btn-image">
                 </a>
             </div>
         </div>
@@ -444,8 +440,8 @@
                         <li><a href="#apropos">À Propos</a></li>
                         <li><a href="#avantages">Avantages</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <li><a href="https://cyberpath.dev/" target="_blank" rel="noopener">Ai2Learn</a></li>
                         <li><a href="https://skzfr.github.io/iic-hub/" target="_blank" rel="noopener">AI Formation</a></li>
+                        <li>Ai2Learn <span style="font-size: 0.8em; color: #0066cc;">(Bientôt)</span></li>
                         <li><a href="#">Admissions</a></li>
                     </ul>
                 </div>
